syntax = "proto3";
package proskenion;

message Signature {
    bytes publicKey = 1;
    bytes signature = 2;
}
